# collector

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: Collector.cpp  Collector.h  SDL_Context.cpp  SDL_Context.h  SDL_context.cpp  SDL_context.h  SDL_utils.cpp  SDL_utils.h  cli.cpp  cli.h  collector.cpp  collector.h  config.cpp  config.h  display.cpp  display.h  displayobject.h  event.cpp  event.h  file.cpp  file.h  filestore.cpp  filestore.h  grid.cpp  grid.h  image.cpp  image.h  main.cpp  selection.cpp  selection.h  selector.cpp  selector.h  text.cpp  text.h  texture.cpp  texture.h  thumbnail.cpp  thumbnail.h  utils.cpp  utils.h
src/display/: cli.cpp  cli.h  cli_command.cpp  cli_command.h  cli_tags.cpp  cli_tags.h  display.cpp  display.h  displayobject.cpp  displayobject.h  grid.cpp  grid.h  info.cpp  info.h  state.cpp  state.h  subtags.cpp  subtags.h  thumbs.cpp  thumbs.h
src/events/: event.cpp  event.h  selection.cpp  selection.h  selector.cpp  selector.h
src/filestore/: file.cpp  file.h  filestore.cpp  filestore.h  operation.cpp  operation.h  selection.cpp  selection.h  selector.cpp  selector.h  tag_info.cpp  tag_info.h  types.h
